cmake_minimum_required(VERSION 2.6)

PROJECT(MSCVISUS)
  
ADD_SUBDIRECTORY(MSCTest)
ADD_SUBDIRECTORY(MSCTest2DViewer)
ADD_SUBDIRECTORY(MSCTest3D)
ADD_SUBDIRECTORY(MSCTest3DSegment)
ADD_SUBDIRECTORY(MSCTestParallelExpansion)
ADD_SUBDIRECTORY(MSCTestParallelRegions)
ADD_SUBDIRECTORY(MSCTestBlockStreaming)
ADD_SUBDIRECTORY(MSCTestIndependentSet)
ADD_SUBDIRECTORY(MSCTest2DBasins) 
    